# fizzbuzz

./: .gitignore  LICENSE  MANIFEST.in  README.md  fizzbuzz.py  requirements.txt  setup.cfg  setup.py  test_fizzbuzz.py
fizzbuzz/: __main__.py  fizzbuzz.py
fizzbuzz.egg-info/: PKG-INFO  SOURCES.txt
src/: __main__.py
src/fizzbuzz/: fizzbuzz.py
src/fizzbuzzer/: cli.py  fizzbuzz.py
tests/: test_fizzbuzz.py
