[metadata]
name = fizzbuzzer
version = 0.0.4
author = Genvalen
author_email =
description = Return the output of an integer, x, according to the rules of FizzBuzz on your command line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/genvalen/fizzbuzz
project_urls =
    Bug Tracker = https://github.com/genvalen/fizzbuzz/issues
classifiers =
    Intended Audience :: Education
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Testing :: Unit


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fizzbuzzer = fizzbuzzer.cli:main
